save statistic while pause advert by admin API